Fix spacing issue if there is no submission.

--- a/src/components/CurrentSubmission.scss
+++ b/src/components/CurrentSubmission.scss
@@ -1,10 +1,12 @@
 #current-submission {
     font-size: 3.5rem;
+    height: 3.7rem;
 }
 
 @media (max-width: 600px) {
     #current-submission {
         font-size: 8vw;
+        height: 8vw;
     }
 }
 
